# unfurl

./: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: server-benchmark.yml
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
server/scripts/: merge_benchmark_reports.py  render_benchmark_report.py  render_lifecycle_benchmark_report.py
server/src/: cache.rs  config.rs  error.rs  extract.rs  fetcher.rs  image_cache.rs  image_proxy.rs  image_worker.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  telemetry.rs  utils.rs
server/tests/: compat.rs  unit.rs
src/: index.ts  types.ts  utils.ts
src/cache/: cache-keys.ts  cache-manager.ts
src/extractors/: meta-handler.ts  meta-tags.ts
src/fetcher/: fetch-page.ts  user-agents.ts
src/handlers/: image-proxy.ts  unfurl.ts
test/: fixtures.d.ts
test/fixtures/html/: full-og.html  malformed.html  no-meta.html  twitter-only.html
test/helpers/: worker.ts
test/integration/: image-proxy.test.ts  unfurl.test.ts
test/unit/: cache-keys.test.ts  meta-handler.test.ts  url.test.ts
