[package]
name = "unfurl-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
aws-config = "1.5.18"
aws-credential-types = "1.2.1"
aws-sdk-s3 = "1.78.0"
axum = { version = "0.8.1", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
image = { version = "0.25.6", default-features = false, features = ["avif", "bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio", "trace"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.15", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "rustls-tls"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
sysinfo = "0.33.1"
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
wiremock = "0.6.3"
